--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "homebridge-pjlink",
-  "version": "1.0.7-beta.0",
+  "version": "1.0.8-beta.0",
   "description": "Homebridge accessory for PJLink supported projectors",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -32,25 +32,22 @@
     "pjlink": "^0.2.8"
   },
   "engines": {
-    "homebridge": "^1.0.4"
+    "homebridge": "^1.8.0 || ^2.0.0-beta.0",
+    "node": "^18.20.0 || ^20.0.0 || ^22.0.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
-    "eslint": "^8.25.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.3.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.0",
-    "homebridge": "^1.5.0",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.7.1",
-    "rimraf": "^3.0.2",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "homebridge": "^1.8.0",
+    "nodemon": "^3.0.0",
+    "prettier": "^3.0.0",
+    "rimraf": "^5.0.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^5.3.0"
   }
 }
